wrap Snow component with div with position:fixed, z-index: -1, adjust flakes number, opacity and size, and remove table-active class on listlessons table and recolor

--- a/src/css/Schedule.css
+++ b/src/css/Schedule.css
@@ -18,6 +18,11 @@
   z-index: 9999;
 }
 
+#snow {
+  z-index: -1;
+  position: fixed;
+}
+
 /***   ListLessons   ***/
 .lesson-list {
   overflow: scroll;
@@ -36,6 +41,8 @@
 .bulk {
   font-weight: 500 !important;
 }
+
+
 /***   SearchLessons   ***/
 
 
